--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -21,7 +21,9 @@
     "rootDir": "./src",
     "paths": {
       "react": ["./node_modules/preact/compat/"],
-      "react-dom": ["./node_modules/preact/compat/"]
+      "react-dom": ["./node_modules/preact/compat/"],
+      "@markprompt/react": ["../react/src/"],
+      "@markprompt/core": ["../core/src/"]
     }
   }
 }
