Move Docusaurus README to top folder

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,7 +8,7 @@
     "directory": "packages/web"
   },
   "license": "MIT",
-  "author": "Motif",
+  "author": "Markprompt",
   "type": "module",
   "exports": {
     ".": "./dist/index.js",
