Add search capabilities to @markprompt/* (#31)
* Start work on adding search primitives

* Split up core, add search results component, only set defaults in core

* Show search results in Markprompt component

* Update footer

* UI adjustments

* Add custom SearchResult component to web component

* UI adjustments

* Handle state transitions

* UI improvements

* Add keyboard interaction for search results, no results component,

* Add changesets

* Update README

* Update with-css-modules

* Fix test suite

* Add jsdoc to types

* Update import names

* CSS tweaks

* Error handling

* Add primary border color

* Snippets and tag

* Upload API URL

* Disable search

* Fix keyword matching

* Add getResultHref

* Add animated search/answer transition and more focus management

* Update READMEs

* Specify lib in @markprompt/react tsconfig

* Catch AbortErrors and don't log the errors

* Remove default open

* Allow logging in analyze

---------

Co-authored-by: Michael Fester <michael.fester@gmail.com>

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,6 +24,8 @@
     "@markprompt/core": "^0.4.6",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-visually-hidden": "^1.0.3",
+    "github-slugger": "^2.0.0",
+    "p-debounce": "^4.0.0",
     "react-markdown": "^8.0.7",
     "react-merge-refs": "^2.0.2",
     "remark-gfm": "^3.0.1"
