--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,6 +32,7 @@
     "@react-spring/web": "^9.7.2",
     "clsx": "^1.2.1",
     "react-simple-animate": "^3.5.2",
+    "react-use-measure": "^2.1.1",
     "transition-hook": "^1.5.2",
     "use-presence": "^1.2.0"
   },
