--- a/examples/with-docusaurus/package.json
+++ b/examples/with-docusaurus/package.json
@@ -35,5 +35,8 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3"
   }
 }
