--- a/examples/with-docusaurus-swizzled/package.json
+++ b/examples/with-docusaurus-swizzled/package.json
@@ -37,5 +37,8 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.0"
   }
 }
