Disable unified-consistency

--- a/.remarkrc.json
+++ b/.remarkrc.json
@@ -7,7 +7,6 @@
     "remark-frontmatter",
     ["remark-prettier", { "report": false }],
     ["remark-toc", { "tight": true }],
-    "remark-validate-links",
-    "unified-consistency"
+    "remark-validate-links"
   ]
 }
