--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,15 +29,9 @@
   },
   "dependencies": {
     "@markprompt/core": "0.5.0",
-    "@react-spring/web": "^9.7.2",
-    "clsx": "^1.2.1",
-    "react-simple-animate": "^3.5.2",
-    "transition-hook": "^1.5.2",
-    "use-presence": "^1.2.0"
+    "@markprompt/react": "0.6.0"
   },
   "devDependencies": {
-    "@markprompt/react": "0.6.0",
-    "@radix-ui/react-accessible-icon": "^1.0.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "esbuild": "^0.17.19",
