--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
       - run: npm ci
       - run: npm run build -w @markprompt/core -w @markprompt/docusaurus-theme-search -w @markprompt/react -w @markprompt/web
       - run: npm run build -w with-css-modules -w with-docusaurus -w with-docusaurus-swizzled -w with-next -w with-markprompt-web
+        env:
+          MARKPROMPT_PROJECT_KEY: ${{ secrets.MARKPROMPT_PROJECT_KEY }}
       - run: npm run lint
 
   test:
