Use `<Markprompt />` from `@markprompt/react` in `@markprompt/docusaurus-theme-search` and update examples (#47)
* Use Markprompt in @markprompt/docusaurus-theme-search

* Update Next.js and Docusaurus examples to use the headful Markprompt component

* Update example dependencies

* Build @markprompt/docusaurus-theme-search in CI

* Add paths to @markprompt/docusaurus-theme-search tsconfig.json

* Cancel previous runs of the CI workflow in the same branch

* Add changesets

* Add MARKPROMPT_PROJECT_KEY environment variable to CI build step

* Don't render <Markprompt /> on the server in with-docusaurus-swizzled

* Add build/ to .prettierignore

* Add build/ to .eslintrc.js ignore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
   push:
     branches: [main]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -15,7 +19,7 @@ jobs:
           node-version: 18
           cache: npm
       - run: npm ci
-      - run: npm run build -w @markprompt/core -w @markprompt/react -w @markprompt/web
+      - run: npm run build -w @markprompt/core -w @markprompt/docusaurus-theme-search -w @markprompt/react -w @markprompt/web
       - run: npm run build -w with-css-modules -w with-docusaurus -w with-docusaurus-swizzled -w with-next -w with-markprompt-web
         env:
           MARKPROMPT_PROJECT_KEY: ${{ secrets.MARKPROMPT_PROJECT_KEY }}
