--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.0.0",
+    "@markprompt/react": "^0.6.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitest/coverage-c8": "^0.31.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "mitt": "^3.0.0",
     "msw": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
