--- a/examples/with-custom-trigger-react/package.json
+++ b/examples/with-custom-trigger-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-custom-trigger",
+  "name": "with-custom-trigger-react",
   "version": "0.0.0",
   "private": true,
   "type": "module",
