--- a/examples/with-docusaurus-swizzled/package.json
+++ b/examples/with-docusaurus-swizzled/package.json
@@ -32,7 +32,7 @@
     "@docusaurus/preset-classic": "^2.4.0",
     "@docusaurus/theme-search-algolia": "^2.4.1",
     "@markprompt/css": "*",
-    "@markprompt/docusaurus-theme-search": "^0.4.0",
+    "@markprompt/docusaurus-theme-search": "*",
     "@markprompt/react": "*",
     "@mdx-js/react": "^1.6.22",
     "prism-react-renderer": "^1.3.5",
