--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -27,10 +27,9 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0",
-    "cpy-cli": "^4.0.0"
-  },
-  "peerDependencies": {
-    "react": "^17"
+    "cpy-cli": "^4.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "publishConfig": {
     "access": "public"
