--- a/examples/with-custom-trigger/package.json
+++ b/examples/with-custom-trigger/package.json
@@ -13,6 +13,7 @@
     "@markprompt/web": "*"
   },
   "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
