Update to React 18 on everything except Docusaurus (#53)
* Update to React 18 on everything except Docusaurus

* Add changeset

* Update workspaces

* Add examples to workspace

* Update package-lock

* Update dependencies

* Exclude Docusaurus from monorepo

* Delete test

* Add missing dependency

--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "markprompt",
   "private": true,
   "workspaces": [
-    "examples/*",
-    "packages/*"
+    "examples/with-css-modules",
+    "examples/with-custom-trigger",
+    "examples/with-custom-trigger-react",
+    "examples/with-markprompt-web",
+    "examples/with-next",
+    "packages/core",
+    "packages/css",
+    "packages/react",
+    "packages/web"
   ],
   "scripts": {
     "build": "npm pack --workspaces",
@@ -54,9 +61,9 @@
     "stylelint-formatter-github": "^1.0.1"
   },
   "overrides": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   }
 }
