--- a/package.json
+++ b/package.json
@@ -2,15 +2,8 @@
   "name": "markprompt",
   "private": true,
   "workspaces": [
-    "examples/with-css-modules",
-    "examples/with-custom-trigger",
-    "examples/with-custom-trigger-react",
-    "examples/with-markprompt-web",
-    "examples/with-next",
-    "packages/core",
-    "packages/css",
-    "packages/react",
-    "packages/web"
+    "examples/*",
+    "packages/*"
   ],
   "scripts": {
     "build": "npm pack --workspaces",
@@ -61,9 +54,9 @@
     "stylelint-formatter-github": "^1.0.1"
   },
   "overrides": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   }
 }
