--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,12 @@ jobs:
           node-version: 18
           cache: npm
       - run: npm ci
-      - run: npm run build -w @markprompt/core -w @markprompt/docusaurus-theme-search -w @markprompt/react -w @markprompt/web
+      - run: >
+          npm run build
+          -w @markprompt/core
+          -w @markprompt/docusaurus-theme-search
+          -w @markprompt/react
+          -w @markprompt/web
       - run: >
           npm run build
           -w with-css-modules
@@ -27,6 +32,7 @@ jobs:
           -w with-custom-trigger-react
           -w with-docusaurus
           -w with-docusaurus-swizzled
+          -w with-init
           -w with-markprompt-web
           -w with-next
         env:
