--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -38,6 +38,7 @@
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "jsdom": "^22.0.0"
   },
   "peerDependencies": {
