Upgrade monorepo dependencies (#81)
* Upgrade dependencies

* Remove unused package

* Update default coverage provider

--- a/package.json
+++ b/package.json
@@ -19,37 +19,35 @@
     "version": "changeset version && npm install"
   },
   "dependencies": {
-    "@changesets/changelog-github": "^0.4.0",
-    "@changesets/cli": "^2.0.0",
-    "@markprompt/react": "^0.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitest/coverage-c8": "^0.31.0",
-    "eslint": "8.35.0",
-    "eslint-config-prettier": "^8.0.0",
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitest/coverage-v8": "^0.32.2",
+    "eslint": "8.43.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "mitt": "^3.0.0",
-    "msw": "^1.0.0",
+    "msw": "^1.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.0",
-    "prettier-plugin-packagejson": "^2.0.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-packagejson": "^2.4.3",
     "remark-cli": "^11.0.0",
-    "remark-frontmatter": "^4.0.0",
+    "remark-frontmatter": "^4.0.1",
     "remark-prettier": "^2.0.0",
-    "remark-toc": "^8.0.0",
-    "remark-validate-links": "^12.0.0",
-    "typescript": "^5.0.0",
+    "remark-toc": "^8.0.1",
+    "remark-validate-links": "^12.1.1",
+    "typescript": "^5.1.6",
     "unified-consistency": "^1.0.0",
-    "vitest": "^0.31.0"
+    "vitest": "^0.32.2"
   },
   "devDependencies": {
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "path-exists-cli": "^2.0.0",
-    "stylelint": "^15.6.2",
+    "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-formatter-github": "^1.0.1"
   },
