--- a/examples/with-init/tsconfig.json
+++ b/examples/with-init/tsconfig.json
@@ -15,5 +15,5 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": ["src", "node_modules/@markprompt/web/dist/init.d.ts"]
+  "include": ["src"]
 }
