--- a/examples/with-css-modules/package.json
+++ b/examples/with-css-modules/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@markprompt/core": "*",
     "@markprompt/react": "*",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-icons": "^1.3.0",
