--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["src/"],
   "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/vitest.setup.ts"],
   "compilerOptions": {
-    "lib": ["dom", "es2022"],
+    "lib": ["dom", "es2022", "esnext"],
     "composite": true,
     "module": "node16",
     "declaration": true,
