--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "prettier-plugin-packagejson": "^2.4.5",
     "remark-cli": "^11.0.0",
     "remark-frontmatter": "^4.0.1",
-    "remark-prettier": "^2.0.0",
     "remark-toc": "^8.0.1",
     "remark-validate-links": "^12.1.1",
     "typescript": "^5.1.6",
     "unified-consistency": "^1.0.1",
+    "unified-prettier": "^1.0.2",
     "vitest": "^0.34.1"
   },
   "devDependencies": {
