--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,8 +37,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "jsdom": "^22.1.0"
+    "@testing-library/user-event": "^14.4.3"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18"
