--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -37,8 +37,7 @@
     "esbuild": "^0.18.17",
     "preact": "^10.16.0",
     "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
-    "typescript": "^5.1.6"
+    "react-dom": "npm:@preact/compat"
   },
   "publishConfig": {
     "access": "public"
