Use React 17-style rendering in @markprompt/web

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -20,8 +20,8 @@
     "outDir": "dist/",
     "rootDir": "./src",
     "paths": {
-      "react": ["./node_modules/preact/compat/"],
-      "react-dom": ["./node_modules/preact/compat/"],
+      "react": ["../../node_modules/preact/compat/"],
+      "react-dom": ["../../node_modules/preact/compat/"],
       "@markprompt/react": ["../react/src/"],
       "@markprompt/core": ["../core/src/"]
     }
