--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "build": "npm pack --workspaces",
-    "lint": "run-p lint:format lint:js lint:md lint:ts",
+    "lint": "run-p lint:css lint:format lint:js lint:md lint:ts",
     "lint:css": "npx stylelint \"**/*.css\"",
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
@@ -21,34 +21,35 @@
   "dependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitest/coverage-v8": "^0.32.2",
-    "eslint": "8.43.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "@vitest/coverage-v8": "^0.34.1",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "msw": "^1.2.2",
+    "jsdom": "^22.1.0",
+    "msw": "^1.2.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
-    "prettier-plugin-packagejson": "^2.4.3",
+    "prettier": "^3.0.1",
+    "prettier-plugin-packagejson": "^2.4.5",
     "remark-cli": "^11.0.0",
     "remark-frontmatter": "^4.0.1",
-    "remark-prettier": "^2.0.0",
     "remark-toc": "^8.0.1",
     "remark-validate-links": "^12.1.1",
     "typescript": "^5.1.6",
-    "unified-consistency": "^1.0.0",
-    "vitest": "^0.32.2"
+    "unified-consistency": "^1.0.1",
+    "unified-prettier": "^1.0.2",
+    "vitest": "^0.34.1"
   },
   "devDependencies": {
     "husky": "^8.0.3",
     "path-exists-cli": "^2.0.0",
-    "stylelint": "^15.9.0",
-    "stylelint-config-standard": "^33.0.0",
+    "stylelint": "^15.10.2",
+    "stylelint-config-standard": "^34.0.0",
     "stylelint-formatter-github": "^1.0.1"
   },
   "overrides": {
