--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,11 +34,10 @@
   "devDependencies": {
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "esbuild": "^0.17.19",
-    "preact": "^10.15.1",
+    "esbuild": "^0.18.17",
+    "preact": "^10.16.0",
     "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
-    "typescript": "^5.0.4"
+    "react-dom": "npm:@preact/compat"
   },
   "publishConfig": {
     "access": "public"
