--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,17 @@ jobs:
       - run: npm ci
       - run: npm test
       - uses: codecov/codecov-action@v3
+
+  bundle-size:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+      - run: npm ci
+      - run: npm run build
+      - uses: preactjs/compressed-size-action@v2
+        with:
+          pattern: './packages/**/dist/**/*.js'
