--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
           cache: npm
       - run: npm ci
       - run: >
-          npm pack
+          npm run build
           -w @markprompt/core
           -w @markprompt/docusaurus-theme-search
           -w @markprompt/react
