--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,6 @@ jobs:
       - run: npm ci
       - uses: preactjs/compressed-size-action@v2
         with:
-          build-script: 'build:packages'
+          build-script: '"build:packages"'
           pattern: './packages/**/dist/**/*.{cjs,js}'
           exclude: '{**/*.map,**/*.d.{ts,cts},**/node_modules/**}'
