--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,4 +58,4 @@ jobs:
         with:
           build-script: '"build:packages"'
           pattern: './packages/**/dist/**/*.{cjs,js}'
-          exclude: '{**/*.map,**/*.d.{ts,cts},**/node_modules/**}'
+          exclude: '{**/*.map,**/*.d.{ts,cts},**/node_modules/**,./packages/**/node_modules/**/dist/**/*}'
