--- a/.remarkrc.json
+++ b/.remarkrc.json
@@ -7,7 +7,6 @@
     "remark-frontmatter",
     ["remark-toc", { "tight": true }],
     "remark-validate-links",
-    "unified-prettier",
-    "unified-consistency"
+    "unified-prettier"
   ]
 }
