--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:format": "prettier --check .",
     "lint:js": "eslint . --quiet",
     "lint:md": "remark . --frail",
-    "lint:ts": "npm run build",
+    "lint:ts": "npm run build && rm *.tgz",
     "prepare": "husky install",
     "publish": "npm run build && changeset publish",
     "test": "vitest run --coverage",
@@ -22,36 +22,33 @@
   "dependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "@vitest/coverage-v8": "^0.34.1",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.28.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "@vitest/coverage-v8": "^0.34.3",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "msw": "^1.2.3",
+    "msw": "^1.2.5",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.1",
+    "path-exists-cli": "^2.0.0",
+    "prettier": "^3.0.3",
     "prettier-plugin-packagejson": "^2.4.5",
     "remark-cli": "^11.0.0",
     "remark-frontmatter": "^4.0.1",
     "remark-toc": "^8.0.1",
     "remark-validate-links": "^12.1.1",
-    "typescript": "^5.1.6",
-    "unified-consistency": "^1.0.1",
-    "unified-prettier": "^1.0.2",
-    "vitest": "^0.34.1"
-  },
-  "devDependencies": {
-    "husky": "^8.0.3",
-    "path-exists-cli": "^2.0.0",
-    "stylelint": "^15.10.2",
+    "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
-    "stylelint-formatter-github": "^1.0.1"
+    "stylelint-formatter-github": "^1.0.1",
+    "typescript": "~5.1.0",
+    "unified-prettier": "^2.0.0",
+    "vitest": "^0.34.3"
   },
   "overrides": {
     "react": "^17.0.0",
