--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,9 +33,10 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/dom": "^8.20.1",
+    "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^12.0.0",
-    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3"
   },
   "peerDependencies": {
