--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^6.0.1",
+    "eslint-plugin-vitest": "^0.3.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "msw": "^1.2.5",
