--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -3,20 +3,30 @@
   "include": ["src/", "./vitest.setup.ts"],
   "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/vitest.setup.ts"],
   "compilerOptions": {
-    "lib": ["dom", "es2022", "esnext"],
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "verbatimModuleSyntax": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+    "lib": ["es2022", "dom"],
+    "jsx": "react",
+
     "composite": true,
-    "module": "node16",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
+
     "rootDir": "./src",
-    "strict": true,
-    "jsx": "react",
     "outDir": "dist",
-    "skipLibCheck": true,
-    "target": "es2021",
+
     "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+
     "paths": {
       "@markprompt/core": ["../core/src"]
     }
