--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,7 +41,8 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.4.3"
+    "@testing-library/user-event": "^14.4.3",
+    "defaults": "^2.0.2"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
