Add chat history sidebar

--- a/examples/with-standalone-chat/package.json
+++ b/examples/with-standalone-chat/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "@markprompt/css": "*",
+    "@markprompt/web": "*"
   }
 }
