--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,9 +16,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --build --clean && tsc --build",
-    "dev": "tsc --build --clean && tsc --build --watch",
-    "prepack": "tsc --build --clean && tsc --build"
+    "build": "tsc --build tsconfig.build.json --clean && tsc --build tsconfig.build.json",
+    "dev": "tsc --build tsconfig.build.json --clean && tsc --build tsconfig.build.json --watch",
+    "prepack": "tsc --build tsconfig.build.json --clean && tsc --build tsconfig.build.json"
   },
   "dependencies": {
     "@floating-ui/react": "^0.25.4",
@@ -43,7 +43,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/user-event": "^14.5.0",
     "defaults": "^2.0.2"
   },
   "peerDependencies": {
