Add chat history (#175)
* Minor UI adjustments

* More UI additions

* Updated cancelled message

* Remove stream separator check on /v1/chat streaming responses

* Only one class needed

* Restore with-markprompt-web init

* Remove submitPrompt

* Remove shared constants.ts

* Update README.md

* Fix inconsistency

* Update @markprompt/react

* Add changesets

* Add support for conversationId

* Fix test suite

* Add changeset

* Update core docs

* Start work on chat history

* Save and restore chat history

* Move logic to zustand store and start work on UI

* Normalize the store, add Select

* Fix z-index

* Export standalone chat view from @markprompt/web

* Add chat history sidebar

* Color theme fixes

* invert logo on dark color schemes

* Update package-lock.json

* throw on missing projectKey

* Work on tests

* Update test

* green

* Add utils test

* Update constants tests

* Add references test

* Improve coverage for ChatView and chat store

* Remove unused import

* Slower chunks

* Move onFeedbackSubmit up

* whitespace

* linting

* Cover ConditionalWrap

* Improve ConditionalWrap and headless tests

* Improve SearchView coverage

* Linting and test fail

* Add tests for the Markprompt component

* Add changesets

* Update README's

* Update changeset

---------

Co-authored-by: Michael Fester <michael.fester@gmail.com>

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "references": [{ "path": "../core" }],
-  "include": ["src/", "./vitest.setup.ts"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/vitest.setup.ts"],
+  "include": ["src/"],
   "compilerOptions": {
     "lib": ["dom", "es2022", "esnext"],
     "composite": true,
@@ -17,6 +16,7 @@
     "target": "es2021",
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
+    "types": ["@testing-library/jest-dom/vitest"],
     "paths": {
       "@markprompt/core": ["../core/src"]
     }
