--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,31 +16,39 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --build --clean && tsc --build",
-    "dev": "tsc --build --clean && tsc --build --watch",
-    "prepack": "tsc --build --clean && tsc --build"
+    "build": "tsc --build tsconfig.build.json --clean && tsc --build tsconfig.build.json",
+    "dev": "tsc --build tsconfig.build.json --clean && tsc --build tsconfig.build.json --watch",
+    "prepack": "tsc --build tsconfig.build.json --clean && tsc --build tsconfig.build.json"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.25.4",
     "@markprompt/core": "^0.15.0",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "clsx": "^2.0.0",
+    "downshift": "^8.1.0",
     "emittery": "^1.0.1",
+    "immer": "^10.0.2",
+    "mdast-util-from-markdown": "^2.0.0",
+    "mdast-util-to-string": "^4.0.0",
     "p-debounce": "^4.0.0",
     "react-markdown": "^8.0.7",
     "react-merge-refs": "^2.0.2",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.20.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.4.3"
+    "@testing-library/user-event": "^14.5.0",
+    "defaults": "^2.0.2"
   },
   "peerDependencies": {
-    "react": "^16 || ^17 || ^18"
+    "react": "^16 || ^17 || ^18",
+    "react-dom": "^16 || ^17 || ^18"
   },
   "publishConfig": {
     "access": "public"
