Add references to tsconfig.build.json

--- a/packages/react/tsconfig.build.json
+++ b/packages/react/tsconfig.build.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "references": [{ "path": "../core" }],
   "compilerOptions": {
     "paths": {
       "@markprompt/core": ["../core/src"]
