--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,6 +31,7 @@
     "downshift": "^8.1.0",
     "emittery": "^1.0.1",
     "immer": "^10.0.2",
+    "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-to-string": "^4.0.0",
     "p-debounce": "^4.0.0",
@@ -45,6 +46,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.0",
+    "@types/lodash": "^4.14.199",
     "defaults": "^2.0.2"
   },
   "peerDependencies": {
