Generate provenance statements for published packages

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
 lockfile-version = 3
+
+# https://docs.npmjs.com/generating-provenance-statements#using-third-party-package-publishing-tools
+provenance=true
