Make sure we're not building test files in project references

--- a/packages/docusaurus-theme-search/tsconfig.json
+++ b/packages/docusaurus-theme-search/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src"],
-  "references": [{ "path": "../react" }],
+  "references": [{ "path": "../react/tsconfig.build.json" }],
   "compilerOptions": {
     "composite": true,
     "module": "node16",
