--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -3,6 +3,11 @@
   "version": "0.16.2",
   "description": "Common CSS for Markprompt components",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/motifland/markprompt-js.git",
+    "directory": "packages/css"
+  },
   "main": "markprompt.css",
   "types": "./index.d.ts",
   "files": [
