Add functions support to core

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.20.0",
+    "@types/json-schema": "^7.0.13",
     "defaults": "^2.0.2",
     "type-fest": "^4.3.1"
   }
