--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -38,6 +38,7 @@
     "react-markdown": "^8.0.7",
     "react-merge-refs": "^2.0.2",
     "remark-gfm": "^3.0.1",
+    "ts-is-present": "^1.2.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
