Start work on generics for type completions in functions.{actual,confirmation}

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,9 +21,9 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.20.0",
-    "@types/json-schema": "^7.0.13",
     "defaults": "^2.0.2",
     "eventsource-parser": "^1.1.1",
+    "json-schema-to-ts": "^2.9.2",
     "openai": "^4.12.4",
     "type-fest": "^4.3.1"
   }
