--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,8 +47,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.0",
-    "@types/lodash": "^4.14.199",
-    "json-schema-to-ts": "^2.9.2"
+    "@types/lodash": "^4.14.199"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
