--- a/examples/with-function-calling/package.json
+++ b/examples/with-function-calling/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-tools-calling",
+  "name": "with-function-calling",
   "version": "0.0.0",
   "private": true,
   "type": "module",
