--- a/examples/with-markprompt-web/package.json
+++ b/examples/with-markprompt-web/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@markprompt/css": "*",
-    "@markprompt/web": "*"
+    "@markprompt/web": "*",
+    "preact": "^10.19.3"
   },
   "devDependencies": {
     "vite": "^4.4.9"
