--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -46,7 +46,8 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.0",
-    "@types/lodash": "^4.14.199"
+    "@types/lodash": "^4.14.199",
+    "vite-tsconfig-paths": "^4.2.2"
   },
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
