--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "react-dom": "^17.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0"
+  },
+  "devDependencies": {
+    "@vitest/ui": "^1.1.0"
   }
 }
