Improve mobile design
- Adds a new useMediaQuery hook
- Displays a close icon instead of the Esc key on touch devices
- Fixes a bug/feature where the prompt input would be automatically zoomed on iOS
  if the font-size was less than 1rem (16px)
- Blur the prompt input on submit to hide the keyboard on mobile devices

--- a/examples/with-markprompt-web/package.json
+++ b/examples/with-markprompt-web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@markprompt/css": "*",
     "@markprompt/web": "*",
-    "preact": "^10.19.3"
+    "preact": "^10.19.3",
+    "randomuuid": "^1.0.1"
   },
   "devDependencies": {
     "vite": "^4.4.9"
