--- a/examples/with-markprompt-web/tsconfig.json
+++ b/examples/with-markprompt-web/tsconfig.json
@@ -7,6 +7,6 @@
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
-  }
+    "jsx": "react-jsx",
+  },
 }
