--- a/examples/with-docusaurus-swizzled/tsconfig.json
+++ b/examples/with-docusaurus-swizzled/tsconfig.json
@@ -1,21 +1,10 @@
 {
+  "extends": "@docusaurus/tsconfig",
   "references": [{ "path": "../../packages/docusaurus-theme-search" }],
   "compilerOptions": {
     "baseUrl": ".",
-    "composite": true,
-    "module": "node16",
-    "isolatedModules": true,
-    "jsx": "react",
     "paths": {
-      "@site/*": ["./*"]
+      "@site/*": ["./*"],
     },
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "es2021",
-    "types": [
-      "node",
-      "@docusaurus/module-type-aliases",
-      "@docusaurus/theme-classic"
-    ]
-  }
+  },
 }
