--- a/examples/with-standalone-chat/tsconfig.json
+++ b/examples/with-standalone-chat/tsconfig.json
@@ -18,7 +18,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
   },
-  "include": ["src"]
+  "include": ["src"],
 }
