--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "vitest": "^1.1.0"
   },
   "overrides": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18"
   },
   "devDependencies": {
     "@vitest/ui": "^1.1.0"
