--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,7 +24,7 @@
     "@floating-ui/react": "^0.25.4",
     "@markprompt/core": "^0.21.4",
     "@radix-ui/react-accessible-icon": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "clsx": "^2.0.0",
@@ -35,23 +35,23 @@
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-to-string": "^4.0.0",
     "p-debounce": "^4.0.0",
-    "react-markdown": "^8.0.7",
-    "react-merge-refs": "^2.0.2",
-    "remark-gfm": "^3.0.1",
+    "react-markdown": "^9.0.1",
+    "react-merge-refs": "^2.1.1",
+    "remark-gfm": "^4.0.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.20.1",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^14.2.0",
     "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.5.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/lodash": "^4.14.199",
     "vite-tsconfig-paths": "^4.2.2"
   },
   "peerDependencies": {
-    "react": "^16 || ^17 || ^18",
-    "react-dom": "^16 || ^17 || ^18"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "publishConfig": {
     "access": "public"
