--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "references": [
     { "path": "../core" },
-    { "path": "../react/tsconfig.build.json" }
+    { "path": "../react/tsconfig.build.json" },
   ],
   "include": ["src/*"],
   "compilerOptions": {
@@ -19,14 +19,14 @@
     "isolatedModules": true,
     "skipLibCheck": true,
     "verbatimModuleSyntax": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "outDir": "dist/",
     "rootDir": "./src",
     "paths": {
       "react": ["./node_modules/preact/compat"],
       "react-dom": ["./node_modules/preact/compat"],
       "@markprompt/react": ["../react/src/"],
-      "@markprompt/core": ["../core/src/"]
-    }
-  }
+      "@markprompt/core": ["../core/src/"],
+    },
+  },
 }
