--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -46,6 +46,7 @@
     "@testing-library/react": "^14.2.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash": "^4.14.199",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "vite-tsconfig-paths": "^4.2.2"
   },
   "peerDependencies": {
